# xclip

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: cmake-linux-platform.yml  cmake-multi-platform.yml  cmake-windows-platform.yml
lua/: CMakeLists.txt  install.bat  readme.md  xclip.i
lua/fusion/: exportXClip.lua  importXClip.lua  xclipioFusion.lua
lua/luaxclip/: xclipTool.lua
lua/xclip/: runme.lua
python/: CMakeLists.txt  readme.md  xclip.i  xclipTool.py
src/: CMakeLists.txt  main.cpp  readme.md  xclipConfig.h.in
src/tests/: CMakeLists.txt  tahoma2dKeyframes.h
src/xclip/: CMakeLists.txt  io.h  mathutils.h  stringutils.h  xclip.cpp  xclip.h  xkey.cpp  xkey.h  xnode.cpp  xnode.h  xtrack.cpp  xtrack.h  xuserdata.h
